--- a/.gitignore
+++ b/.gitignore
@@ -2,7 +2,11 @@
 .settings
 /target/
 mahjong.log
-.idea
+
+#-----------------
+# IntelliJ ignore list
+#-----------------
+.idea/
 
 #-----------------
 # Java ignore list
@@ -76,3 +80,9 @@ $RECYCLE.BIN/
 # Windows shortcuts
 *.lnk
 /build/
+
+#--------------------
+# MicrosoftOffice ignore list
+#--------------------
+# Excel temporary
+~$*.xls*
